--- a/etc/nginx/i.subpolare.ru.conf
+++ b/etc/nginx/i.subpolare.ru.conf
@@ -12,8 +12,8 @@ server {
     listen [::]:443 ssl http2;
     server_name i.subpolare.ru;
 
-    ssl_certificate     /etc/letsencrypt/live/subpolare.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/subpolare.ru/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/i.subpolare.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/i.subpolare.ru/privkey.pem;
 
     charset utf-8;
     client_max_body_size 100M;
