--- a/etc/nginx/i.subpolare.ru.conf
+++ b/etc/nginx/i.subpolare.ru.conf
@@ -38,7 +38,7 @@ server {
 
     location /images/ {
         internal;
-        alias /srv/i.subpolare/storage/images/;
+        alias /srv/i.subpolare/images/;
         try_files $uri =404;
         expires 365d;
         add_header Cache-Control "public, immutable" always;
@@ -46,7 +46,7 @@ server {
 
     location /videos/ {
         internal;
-        alias /srv/i.subpolare/storage/videos/;
+        alias /srv/i.subpolare/videos/;
         try_files $uri =404;
         expires 30d;
         add_header Cache-Control "public" always;
