--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - .env
     environment:
       FLASK_DEBUG: ${FLASK_DEBUG:-1}
+      HOST: 0.0.0.0
+      PORT: 5000
     volumes:
       - ./images:/app/images
       - ./videos:/app/videos
