feat: update logging settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,13 @@ services:
     build: .
     ports:
       - "127.0.0.1:8023:5000"
-    env_file:
-      - .env
     environment:
       FLASK_DEBUG: ${FLASK_DEBUG:-1}
       HOST: 0.0.0.0
       PORT: 5000
+    env_file:
+      - .env
+    restart: always
     volumes:
       - ./images:/app/images
       - ./videos:/app/videos
@@ -16,6 +17,12 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100M"
+        max-file: "3"
+
   db:
     image: postgres:15
     restart: unless-stopped
@@ -31,5 +38,3 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-volumes:
-  pgdata:
