--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_DB: i_subpolare_ru
       POSTGRES_USER: subpolare
       POSTGRES_PASSWORD: subpolare
-      POSTGRES_HOST: localhost
+      POSTGRES_HOST: postgres
       HOST: 0.0.0.0
       PORT: 5000
     env_file:
