--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     volumes:
       - /home/subpolare/pgdata_i_subpolare_ru:/var/lib/postgresql/data:rw
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
+      test: ["CMD", "pg_isready", "-U", "subpolare",  "-d", "i_subpolare_ru"]
       interval: 5s
       timeout: 5s
       retries: 5
